--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
               <a class="nav-link" href="calendarios.html">Agenda</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Services</a>
+              <a class="nav-link" href="https://scharss.moodlecloud.com">Escuela</a>
             </li>
-            <li class="nav-item">
+            <!--<li class="nav-item">
               <a class="nav-link" href="#">Contact</a>
-            </li>
+            </li>-->
           </ul>
         </div>
       </div>
